--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.webjars:bootstrap:3.3.5')
+	compile('org.webjars:bootstrap:4.1.1')
+	compile 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.3.0'
+	
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
